Went on with the thesis

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -12,6 +12,9 @@
 \usepackage{geometry}
 \usepackage{titling}
 \usepackage{array}
+\usepackage{tikz}
+\usetikzlibrary{positioning}
+\usetikzlibrary{shapes.geometric}
 
 % Page geometry
 \geometry{
