--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -1,5 +1,5 @@
 % Main thesis document
-\documentclass[12pt,a4paper,twoside]{report}
+\documentclass[11pt,a4paper,twoside]{report}
 
 % Packages
 \usepackage[utf8]{inputenc}
@@ -13,6 +13,7 @@
 \usepackage{titling}
 \usepackage{array}
 \usepackage{tikz}
+\usepackage[htt]{hyphenat}
 \usetikzlibrary{positioning}
 \usetikzlibrary{shapes.geometric}
 
@@ -26,7 +27,7 @@
 }
 
 % Line spacing
-\onehalfspacing
+\singlespacing
 
 % Hyperref setup
 \hypersetup{
