Added new chapters

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -85,6 +85,7 @@
 \end{abstract}
 
 % Table of contents
+\setcounter{tocdepth}{1}  % Only show chapters (0) and sections (1), hide subsections (2)
 \tableofcontents
 \listoffigures
 \listoftables
