Fixed some chapters

--- a/thesis/bibliography/references.bib
+++ b/thesis/bibliography/references.bib
@@ -1,10 +1,251 @@
 % Bibliography entries
 
-@article{example2023,
-  author = {Author, A. and Author, B.},
-  title = {Example Paper Title},
-  journal = {Journal Name},
+% ========================================
+% REINFORCEMENT LEARNING - Section 2.2
+% ========================================
+
+@book{sutton2018reinforcement,
+  author = {Sutton, Richard S. and Barto, Andrew G.},
+  title = {Reinforcement Learning: An Introduction},
+  year = {2018},
+  publisher = {MIT Press},
+  edition = {2nd},
+  address = {Cambridge, MA}
+}
+
+@article{mnih2015humanlevel,
+  author = {Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A. and Veness, Joel and Bellemare, Marc G. and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K. and Ostrovski, Georg and others},
+  title = {Human-level control through deep reinforcement learning},
+  journal = {Nature},
+  year = {2015},
+  volume = {518},
+  number = {7540},
+  pages = {529--533}
+}
+
+@article{williams1992simple,
+  author = {Williams, Ronald J.},
+  title = {Simple statistical gradient-following algorithms for connectionist reinforcement learning},
+  journal = {Machine Learning},
+  year = {1992},
+  volume = {8},
+  pages = {229--256}
+}
+
+@article{silver2017mastering,
+  author = {Silver, David and Schrittwieser, Julian and Simonyan, Karen and Antonoglou, Ioannis and Huang, Aja and Guez, Arthur and Hubert, Thomas and Baker, Lucas and Lai, Matthew and Bolton, Adrian and others},
+  title = {Mastering the game of Go without human knowledge},
+  journal = {Nature},
+  year = {2017},
+  volume = {550},
+  pages = {354--359}
+}
+
+@article{silver2018general,
+  author = {Silver, David and Hubert, Thomas and Schrittwieser, Julian and Antonoglou, Ioannis and Lai, Matthew and Guez, Arthur and Lanctot, Marc and Sifre, Laurent and Kumaran, Dharshan and Graepel, Thore and others},
+  title = {A general reinforcement learning algorithm that masters chess, shogi, and Go through self-play},
+  journal = {Science},
+  year = {2018},
+  volume = {362},
+  pages = {1140--1144}
+}
+
+@article{browne2012survey,
+  author = {Browne, Cameron B and Powley, Edward and Whitehouse, Daniel and Lucas, Simon M and Cowling, Peter I and Rohlfshagen, Philipp and Tavener, Stephen and Perez, Diego and Samothrakis, Spyridon and Colton, Simon},
+  title = {A survey of Monte Carlo tree search methods},
+  journal = {IEEE Transactions on Computational Intelligence and AI in Games},
+  year = {2012},
+  volume = {4},
+  number = {1},
+  pages = {1--43}
+}
+
+% ========================================
+% FEDERATED LEARNING - Section 2.3
+% ========================================
+
+@inproceedings{mcmahan2017communication,
+  author = {McMahan, Brendan and Moore, Eider and Ramage, Daniel and Hampson, Seth and Arcas, Blaise Aguera y},
+  title = {Communication-Efficient Learning of Deep Networks from Decentralized Data},
+  booktitle = {Proceedings of the 20th International Conference on Artificial Intelligence and Statistics (AISTATS)},
+  year = {2017},
+  pages = {1273--1282},
+  volume = {54},
+  series = {Proceedings of Machine Learning Research}
+}
+
+@article{kairouz2021advances,
+  author = {Kairouz, Peter and McMahan, H Brendan and Avent, Brendan and Bellet, Aur{\'e}lien and Bennis, Mehdi and Bhagoji, Arjun Nitin and Bonawitz, Kallista and Charles, Zachary and Cormode, Graham and Cummings, Rachel and others},
+  title = {Advances and open problems in federated learning},
+  journal = {Foundations and Trends in Machine Learning},
+  year = {2021},
+  volume = {14},
+  number = {1--2},
+  pages = {1--210}
+}
+
+@inproceedings{li2020federated,
+  author = {Li, Tian and Sahu, Anit Kumar and Zaheer, Manzil and Sanjabi, Maziar and Talwalkar, Ameet and Smith, Virginia},
+  title = {Federated optimization in heterogeneous networks},
+  booktitle = {Proceedings of Machine Learning and Systems (MLSys)},
+  year = {2020},
+  volume = {2},
+  pages = {429--450}
+}
+
+@article{sattler2020clustered,
+  author = {Sattler, Felix and M{\"u}ller, Klaus-Robert and Samek, Wojciech},
+  title = {Clustered federated learning: Model-agnostic distributed learning and optimization under privacy and communication constraints},
+  journal = {IEEE Transactions on Neural Networks and Learning Systems},
+  year = {2020},
+  volume = {32},
+  number = {8},
+  pages = {3710--3722}
+}
+
+@inproceedings{fallah2020personalized,
+  author = {Fallah, Alireza and Mokhtari, Aryan and Ozdaglar, Asuman},
+  title = {Personalized federated learning with theoretical guarantees: A model-agnostic meta-learning approach},
+  booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
+  year = {2020},
+  volume = {33},
+  pages = {3557--3568}
+}
+
+@inproceedings{arivazhagan2019federated,
+  author = {Arivazhagan, Manoj Ghuhan and Aggarwal, Vinay and Singh, Aaditya Kumar and Choudhary, Sunav},
+  title = {Federated learning with personalization layers},
+  booktitle = {arXiv preprint arXiv:1912.00818},
+  year = {2019}
+}
+
+% ========================================
+% CHESS ENGINES AND AI - Section 2.4
+% ========================================
+
+@article{campbell2002deep,
+  author = {Campbell, Murray and Hoane Jr, A Joseph and Hsu, Feng-hsiung},
+  title = {Deep Blue},
+  journal = {Artificial Intelligence},
+  year = {2002},
+  volume = {134},
+  number = {1-2},
+  pages = {57--83}
+}
+
+@misc{stockfish2023,
+  author = {{Stockfish Developers}},
+  title = {Stockfish: A Strong Open Source Chess Engine},
   year = {2023},
-  volume = {1},
-  pages = {1--10}
+  howpublished = {\url{https://stockfishchess.org/}},
+  note = {Accessed: 2024-12-01}
+}
+
+@misc{lc0,
+  author = {{Leela Chess Zero}},
+  title = {Leela Chess Zero},
+  year = {2023},
+  howpublished = {\url{https://lczero.org/}},
+  note = {Accessed: 2024-12-01}
+}
+
+@article{knuth1975analysis,
+  author = {Knuth, Donald E. and Moore, Ronald W.},
+  title = {An analysis of alpha-beta pruning},
+  journal = {Artificial Intelligence},
+  year = {1975},
+  volume = {6},
+  number = {4},
+  pages = {293--326}
+}
+
+% ========================================
+% RELATED WORK - Section 2.5
+% ========================================
+
+% Distributed RL
+@inproceedings{mnih2016asynchronous,
+  author = {Mnih, Volodymyr and Badia, Adria Puigdomenech and Mirza, Mehdi and Graves, Alex and Lillicrap, Timothy and Harley, Tim and Silver, David and Kavukcuoglu, Koray},
+  title = {Asynchronous methods for deep reinforcement learning},
+  booktitle = {International Conference on Machine Learning (ICML)},
+  year = {2016},
+  pages = {1928--1937}
+}
+
+@inproceedings{espeholt2018impala,
+  author = {Espeholt, Lasse and Soyer, Hubert and Munos, Remi and Simonyan, Karen and Mnih, Vlad and Ward, Tom and Doron, Yotam and Firoiu, Vlad and Harley, Tim and Dunning, Iain and others},
+  title = {IMPALA: Scalable distributed deep-RL with importance weighted actor-learner architectures},
+  booktitle = {International Conference on Machine Learning (ICML)},
+  year = {2018},
+  pages = {1407--1416}
+}
+
+% Federated RL
+@article{nadiger2019federated,
+  author = {Nadiger, Chirag and Kumar, Anuj and Abdelhak, Shikha},
+  title = {Federated reinforcement learning for fast personalization},
+  journal = {arXiv preprint arXiv:1910.04669},
+  year = {2019}
+}
+
+@inproceedings{khodadadian2022federated,
+  author = {Khodadadian, Sajad and Sharma, Pranay and Joshi, Gauri and Maguluri, Siva Theja},
+  title = {Federated reinforcement learning: Linear speedup under Markovian sampling},
+  booktitle = {International Conference on Machine Learning (ICML)},
+  year = {2022},
+  pages = {10997--11057}
+}
+
+% Behavioral Diversity
+@article{pugh2016quality,
+  author = {Pugh, Justin K and Soros, Lisa B and Stanley, Kenneth O},
+  title = {Quality diversity: A new frontier for evolutionary computation},
+  journal = {Frontiers in Robotics and AI},
+  year = {2016},
+  volume = {3},
+  pages = {40}
+}
+
+@article{parker2020effective,
+  author = {Parker-Holder, Jack and Pacchiano, Aldo and Choromanski, Krzysztof M and Roberts, Stephen J},
+  title = {Effective diversity in population based reinforcement learning},
+  journal = {Advances in Neural Information Processing Systems (NeurIPS)},
+  year = {2020},
+  volume = {33},
+  pages = {18050--18062}
+}
+
+% Clustered FL
+@inproceedings{ghosh2020efficient,
+  author = {Ghosh, Avishek and Chung, Jichan and Yin, Dong and Ramchandran, Kannan},
+  title = {An efficient framework for clustered federated learning},
+  booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
+  year = {2020},
+  volume = {33},
+  pages = {19586--19597}
+}
+
+@article{briggs2020federated,
+  author = {Briggs, Christopher and Fan, Zhong and Andras, Peter},
+  title = {Federated learning with hierarchical clustering of local updates to improve training on non-IID data},
+  journal = {arXiv preprint arXiv:2004.11791},
+  year = {2020}
+}
+
+% Transfer Learning in RL
+@inproceedings{rusu2016progressive,
+  author = {Rusu, Andrei A and Rabinowitz, Neil C and Desjardins, Guillaume and Soyer, Hubert and Kirkpatrick, James and Kavukcuoglu, Koray and Pascanu, Razvan and Hadsell, Raia},
+  title = {Progressive neural networks},
+  booktitle = {arXiv preprint arXiv:1606.04671},
+  year = {2016}
+}
+
+@inproceedings{taylor2009transfer,
+  author = {Taylor, Matthew E and Stone, Peter},
+  title = {Transfer learning for reinforcement learning domains: A survey},
+  journal = {Journal of Machine Learning Research},
+  year = {2009},
+  volume = {10},
+  number = {7},
+  pages = {1633--1685}
 }
