--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -99,13 +99,16 @@
 \include{chapters/06-results}
 \include{chapters/07-conclusion}
 
+% Acknowledgements
+\include{chapters/acknowledgements}
+
 % Bibliography
 \bibliographystyle{plain}
 \nocite{*}
 \bibliography{bibliography/references}
 
 % Appendices
-\appendix
-\include{appendices/appendix-a}
+%\appendix
+%\include{appendices/appendix-a}
 
 \end{document}
