Modified some sections

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -100,7 +100,7 @@
 \include{chapters/07-conclusion}
 
 % Acknowledgements
-\include{chapters/acknowledgements}
+%\include{chapters/acknowledgements}
 
 % Bibliography
 \bibliographystyle{plain}
