Inverted Francesco Finucci on the left

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -67,11 +67,11 @@
     \textbf{\Large A Framework for Chess Playstyle Preservation}
     \vspace{5 em}
     \vspace{-.75cm}
-    \begin{tabular}[H]{p{220pt}p{35pt}p{130pt}}
-      \normalsize{\textit{\textbf{Supervisor}}\vspace{0.3em}} &&  \normalsize{\textit{\textbf{Student}}}  \\
-      \normalsize{Prof. Massimo Callisto De Donato\vspace{0.3em}}  && {Francesco Finucci}\\
-      \normalsize{\textit{\textbf{Co-Supervisor}}\vspace{0.3em}} && \\
-      \normalsize{PhD. Student Martina Zannotti\vspace{0.3em}}  && \\
+    \begin{tabular}[H]{p{130pt}p{120pt}p{220pt}}
+      \normalsize{\textit{\textbf{Student}}} &&  \normalsize{\textit{\textbf{Supervisor}}\vspace{0.3em}}  \\
+      {Francesco Finucci}  && \normalsize{Prof. Massimo Callisto De Donato\vspace{0.3em}}\\
+       && \normalsize{\textit{\textbf{Co-Supervisor}}\vspace{0.3em}} \\
+       && \normalsize{PhD. Student Martina Zannotti\vspace{0.3em}}  \\
     \vspace{2 em}
     \end{tabular}\\
     \vspace{1.2 em} \vfill
